--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expo-blazepose-frisbee-throws",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,20 +10,29 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.10.1",
+    "@expo/vector-icons": "^15.0.3",
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
+    "@react-navigation/drawer": "^7.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.23",
+    "expo-constants": "~18.0.10",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
     "nativewind": "4.2.1",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.13.0",
-    "react-native-worklets": "^0.5.1",
+    "react-native-worklets": "0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20"
   },
