--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "react-native-vision-camera"
     ],
     "scheme": "your-app-scheme"
   }
