--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.13.0",
+    "react-native-vision-camera": "^4.7.2",
     "react-native-worklets": "0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20"
