--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-navigation/drawer": "^7.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~54.0.0",
@@ -28,12 +29,17 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.5",
+    "react-native-pressable-opacity": "^1.0.10",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "^15.13.0",
     "react-native-vision-camera": "^4.7.2",
     "react-native-worklets": "0.5.1",
+    "react-native-worklets-core": "^1.6.2",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20"
   },
