implemented media viewer

--- a/app.json
+++ b/app.json
@@ -36,7 +36,8 @@
     },
     "plugins": [
       "expo-router",
-      "react-native-vision-camera"
+      "react-native-vision-camera",
+      "expo-video"
     ],
     "scheme": "your-app-scheme"
   }
