--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
+    "expo-media-library": "^18.2.0",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.14",
     "nativewind": "4.2.1",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
