--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/drawer": "^7.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.23",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "^19.0.17",
+    "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-media-library": "^18.2.0",
     "expo-router": "~6.0.14",
