--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
     "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.3.0",
-    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "@mediapipe/pose": "^0.5.1675469404",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/drawer": "^7.7.2",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.23",
     "expo-av": "^16.0.7",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-file-system": "^19.0.17",
+    "expo-gl": "~16.0.7",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-media-library": "^18.2.0",
@@ -34,6 +42,7 @@
     "react-aria": "^3.33.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mmkv": "^4.0.0",
     "react-native-nitro-modules": "^0.31.5",
