--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-constants": "~18.0.10",
     "expo-file-system": "^19.0.17",
     "expo-gl": "~16.0.7",
+    "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-media-library": "^18.2.0",
@@ -52,6 +53,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "^15.13.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-vision-camera": "^4.7.2",
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
